# FFMPEG-AAC-264-Android-32-64

./: README.md
fdk-aac/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.in  android_gradle_build.json  build_ARM.sh  build_ARM_64_v8a.sh  build_ARM_git.sh  build_X86.sh  build_X86_64.sh  cmake_install.cmake  config.status  configure  libfdk-aac.la  libtool
fdk-aac/.libs/: libfdk-aac.lai
fdk-aac/android/arm64v8a/lib/: libfdk-aac.la
fdk-aac/android/armv7a/lib/: libfdk-aac.la
fdk-aac/android/x86/lib/: libfdk-aac.la
fdk-aac/libAACdec/src/: aac_ram.lo  aac_rom.lo  aacdec_drc.lo  aacdec_hcr.lo  aacdec_hcr_bit.lo  aacdec_hcrs.lo  aacdec_pns.lo  aacdec_tns.lo  aacdecoder.lo  aacdecoder_lib.lo  block.lo  channel.lo  channelinfo.lo  conceal.lo  ldfiltbank.lo  pulsedata.lo  rvlc.lo  rvlcbit.lo  rvlcconceal.lo  stereo.lo
fdk-aac/libAACdec/src/.deps/: aac_ram.Plo  aac_rom.Plo  aacdec_drc.Plo  aacdec_hcr.Plo  aacdec_hcr_bit.Plo  aacdec_hcrs.Plo  aacdec_pns.Plo  aacdec_tns.Plo  aacdecoder.Plo  aacdecoder_lib.Plo  block.Plo  channel.Plo  channelinfo.Plo  conceal.Plo  ldfiltbank.Plo  pulsedata.Plo  rvlc.Plo  rvlcbit.Plo  rvlcconceal.Plo  stereo.Plo
fdk-aac/libAACenc/src/: aacEnc_ram.lo  aacEnc_rom.lo  aacenc.lo  aacenc_lib.lo  aacenc_pns.lo  aacenc_tns.lo  adj_thr.lo  band_nrg.lo  bandwidth.lo  bit_cnt.lo  bitenc.lo  block_switch.lo  channel_map.lo  chaosmeasure.lo  dyn_bits.lo  grp_data.lo  intensity.lo  line_pe.lo  metadata_compressor.lo  metadata_main.lo  ms_stereo.lo  noisedet.lo  pnsparam.lo  pre_echo_control.lo  psy_configuration.lo  psy_main.lo  qc_main.lo  quantize.lo  sf_estim.lo  spreading.lo  tonality.lo  transform.lo
fdk-aac/libAACenc/src/.deps/: aacEnc_ram.Plo  aacEnc_rom.Plo  (+30 more)
fdk-aac/libFDK/src/: FDK_bitbuffer.lo  FDK_core.lo  FDK_crc.lo  FDK_hybrid.lo  FDK_tools_rom.lo  FDK_trigFcts.lo  autocorr2nd.lo  dct.lo  fft.lo  fft_rad2.lo  fixpoint_math.lo  mdct.lo  qmf.lo  scale.lo
fdk-aac/libMpegTPDec/src/: tpdec_adif.lo  tpdec_adts.lo  tpdec_asc.lo  tpdec_drm.lo  tpdec_latm.lo  tpdec_lib.lo
fdk-aac/libMpegTPEnc/src/: tpenc_adif.lo  tpenc_adts.lo  tpenc_asc.lo  tpenc_latm.lo  tpenc_lib.lo
fdk-aac/libPCMutils/src/: limiter.lo  pcmutils_lib.lo
fdk-aac/libSBRdec/src/: env_calc.lo  env_dec.lo  env_extr.lo  huff_dec.lo  lpp_tran.lo  psbitdec.lo  psdec.lo  psdec_hybrid.lo  sbr_crc.lo  sbr_deb.lo  sbr_dec.lo  sbr_ram.lo  sbr_rom.lo  sbrdec_drc.lo  sbrdec_freq_sca.lo  sbrdecoder.lo
fdk-aac/libSBRenc/src/: bit_sbr.lo  code_env.lo  env_bit.lo  env_est.lo  fram_gen.lo  invf_est.lo  mh_det.lo  nf_est.lo  ps_bitenc.lo  ps_encode.lo  ps_main.lo  resampler.lo  sbr_encoder.lo  sbr_misc.lo  sbr_ram.lo  sbr_rom.lo  sbrenc_freq_sca.lo  ton_corr.lo  tran_det.lo
fdk-aac/libSYS/src/: cmdl_parser.lo  conv_string.lo  genericStds.lo  wav_file.lo
(+428 files in other folders)
